@@ -21,8 +21,9 @@ For 5.1
 For 5.0
     TODO: Overhaul very old and out of date documentation
     TODO: Finish updating text and formatting in Readme file
-    TODO: Long GNU named params for command line tool, e.g. --some-option
+    TODO: Verify that long options in CLT work
 
+    * Long GNU named params for command line tool, e.g. --some-option
     * Fixed issue where ScriptExec quit before script output was parsed
     * Add new examples Icns2Iconset, ImageResizer
     * Integrated CFBundleVersion increment script into build process
